--- a/src/styles/cardDisplay.css
+++ b/src/styles/cardDisplay.css
@@ -6,6 +6,26 @@
 
 .card-display-container .card-container {
     display: flex;
+    gap: 1%;
+
+    width: 100%;
+
+    padding-left: 1%;
+    padding-right: 1%;
+
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+}
+.card-display-container:last-child {
+    border-bottom: 2px solid black;
+}
+
+.card-display-container .info-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0%;
+
     width: 100%;
 }
 
@@ -13,15 +33,31 @@
     text-align: left;
     margin-top: 0;
     margin-bottom: 0;
+
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
+
+    border-bottom: 1px solid gray;
 }
 
 .card-display-container .card-container .card-image {
     width: 105.25px;
     height: 153.5px;
+
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
 }
 
 .card-display-container .stat-container {
     display: flex;
+    gap: 4%;
+
+    width: 100%;
+
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
+
+    border-bottom: 1px solid gray;
 }
 
 .card-display-container .attribute-container {
@@ -46,15 +82,38 @@
 .card-display-container .level-container h4 {
     margin-top: 0;
     margin-bottom: 0;
+
+    font-size: 14px;
 }
 
+.card-display-container .atk-container {
+    display: flex;
+    align-items: center;
+}
 .card-display-container .atk-container h4 {
     margin-top: 0;
     margin-bottom: 0;
+    
+    font-size: 12px;
 }
 
 .card-display-container .race-container h4 {
     text-align: left;
     margin-top: 0;
     margin-bottom: 0;
+
+    padding-top: 1.5%;
+    padding-bottom: 1.75%;
+
+    border-bottom: 1px solid gray;
+}
+
+.card-display-container .desc-container p {
+    margin-top: 0;
+    margin-bottom: 0;
+
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
+
+    font-size: 15px;
 }
