--- a/src/styles/cardDisplay.css
+++ b/src/styles/cardDisplay.css
@@ -10,18 +10,22 @@
 
     width: 100%;
 
-    margin-left: 1.5%;
-    margin-right: 1.5%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
 
     padding-left: 1%;
     padding-right: 1%;
 
-    border-top: 2px solid black;
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.3);
+
+    /* border-top: 2px solid black;
     border-left: 2px solid black;
-    border-right: 2px solid black;
+    border-right: 2px solid black; */
 }
 .card-display-container:last-child {
-    border-bottom: 2px solid black;
+    /* border-bottom: 2px solid black; */
 }
 
 .card-display-container .info-container {
@@ -49,6 +53,8 @@
 
     padding-top: 1.5%;
     padding-bottom: 1.5%;
+
+    cursor: pointer;
 }
 
 .card-display-container .stat-container {
