--- a/src/styles/cardSearch.css
+++ b/src/styles/cardSearch.css
@@ -14,8 +14,10 @@
 
 .card-search-container .card-search-input {
     margin-top: 3%;
+    margin-bottom: 1.5%;
     text-align: center;
     width: 75%;
+    height: 2rem;
 
     border-radius: 1rem;
 }
