--- a/src/styles/searchPage.css
+++ b/src/styles/searchPage.css
@@ -3,3 +3,12 @@
     flex-direction: column;
     align-items: center;
 }
+
+.search-page .page-button-container {
+    display: flex;
+    gap: 4%;
+}
+
+.search-page .page-button-container button {
+    /* background-color: gold; */
+}
