--- a/src/styles/cardDisplay.css
+++ b/src/styles/cardDisplay.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background-color: rgb(243,243,243);
 }
 
 .card-display-container .card-container {
@@ -9,6 +10,7 @@
     gap: 1%;
 
     width: 100%;
+    max-width: 800px;
 
     margin-top: 3%;
     margin-bottom: 3%;
@@ -23,6 +25,8 @@
     /* border-top: 2px solid black;
     border-left: 2px solid black;
     border-right: 2px solid black; */
+
+    background-color: white;
 }
 .card-display-container:last-child {
     /* border-bottom: 2px solid black; */
