--- a/src/styles/cardSearch.css
+++ b/src/styles/cardSearch.css
@@ -2,14 +2,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
 
-    width: 80%;
-    height: 60%;
+    width: 100%;
+    height: 15rem;
 
-    margin-top: 5%;
+    padding-bottom: 2.5%;
+
+    /* margin-top: 5%; */
     margin-bottom: 5%;
 
-    background-color: rgb(0, 0, 130);
+    background-color: rgb(236,236,236);
+}
+
+.card-search-container .search-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 100%;
 }
 
 .card-search-container .card-search-input {
