--- a/src/styles/searchPage.css
+++ b/src/styles/searchPage.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgb(243,243,243);
 }
 
 .search-page .page-button-container {
