--- a/src/styles/deckMakerPage.css
+++ b/src/styles/deckMakerPage.css
@@ -6,25 +6,68 @@
 
 .deck-maker-container .card-info-container {
     width: 100%;
-    height: 100%;
+    height: 33vh;
 
     border: 1px solid black;
 }
 
 .deck-maker-container .deck-container {
     width: 100%;
-    height: 100%;
+    height: 34vh;
+
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+
+    overflow: auto;
+}
+.deck-container img {
+    width: 35px;
+    height: 51px;
+}
+
+.main-deck-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+.extra-deck-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.deck-maker-container .search-container {
+    width: 100%;
+    height: 33vh;
+
+    overflow: auto;
 
     border-left: 1px solid black;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
 }
 
-.deck-maker-container .search-container {
-    width: 100%;
-    height: 100%;
+.search-container .filter-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5%;
+}
+input, select {
+    text-align: center;
+}
 
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
+.search-container .card-container {
+    margin-bottom: 5%;
+}
+.search-container .card-container img {
+    width: 105.25px;
+    height: 153.5px;
+}
+.search-container .card-container h4 {
+    font-size: 1rem;
+    margin: 0;
 }
