--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -5,13 +5,19 @@
     background-color: rgb(236,236,236);
 
     width: 100%;
-    height: 5rem;
+
+    padding-top: .5%;
 }
 
 .navbar-container .kc-logo {
     width: 87px;
     height: 64px;
     cursor: pointer;
+
+    padding: 0;
+    margin-left: -.5%;
+
+    z-index: 99999;
 }
 
 .email-logout, .signup-login {
