--- a/src/styles/searchPage.css
+++ b/src/styles/searchPage.css
@@ -5,6 +5,13 @@
     background-color: rgb(243,243,243);
 }
 
+.search-nav {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
 .search-page .page-button-container {
     display: flex;
     justify-content: center;
