added styling for info section of deck maker page

--- a/src/styles/cardSearch.css
+++ b/src/styles/cardSearch.css
@@ -40,3 +40,8 @@
     border-radius: .75rem;
     background-color: gold;
 }
+
+.card-search-container img {
+    width: 132px;
+    height: 48px;
+}
