--- a/src/styles/deckMakerPage.css
+++ b/src/styles/deckMakerPage.css
@@ -6,18 +6,47 @@
 
 .deck-maker-container .card-info-container {
     width: 100%;
-    height: 33vh;
+    height: 37vh;
 
     border: 1px solid black;
+
+    overflow: auto;
+}
+.card-info-container img {
+    width: 140px;
+    height: 204px;
+}
+.card-info-container p {
+    font-size: 12px;
+}
+.card-info-container .desc-container {
+    width: 100%;
+    height: 4.5rem;
+    overflow: auto;
 }
 
 .deck-maker-container .deck-container {
     width: 100%;
-    height: 34vh;
+    height: 33vh;
 
     border-left: 1px solid black;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
+
+    overflow: auto;
+    position: relative;
+}
+.deck-container .deck-title {
+    display: flex;
+
+    position: sticky;
+    top: 0;
+
+    background-color: white;
+    border-bottom: 1px solid black;
+}
+.deck-title input {
+    border-radius: 1rem;
 }
 .deck-container img {
     width: 35px;
@@ -31,6 +60,8 @@
 
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+
+    overflow: auto;
 }
 .extra-deck-container {
     display: flex;
@@ -63,9 +94,17 @@
 .filter-container .input-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     position: sticky;
     top: 0;
+}
+.input-container input {
+    width: 75%;
+    border-radius: 1rem;
+}
+.input-container select {
+    width: 100%;
 }
 input, select {
     text-align: center;
