--- a/src/styles/deckMakerPage.css
+++ b/src/styles/deckMakerPage.css
@@ -45,10 +45,13 @@
 }
 .deck-container .deck-title {
     display: flex;
+    gap: 5%;
     align-items: center;
 
     position: sticky;
     top: 0;
+
+    background-color: rgb(250, 250, 250);
 
     border-bottom: 1px solid black;
 }
@@ -59,12 +62,22 @@
 .card-frame-container {
     display: flex;
     align-items: center;
+    gap: 5%;
 }
 .card-frame-container div {
     margin-top: 1.25%;
+    padding: 0;
 }
 .card-frame-container h4 {
     margin: 0;
+    font-size: 20px;
+}
+
+.cover-card {
+    width: 35px;
+    height: 51px;
+
+    cursor: pointer;
 }
 
 .main-deck-container img, .extra-deck-container img {
@@ -155,6 +168,8 @@ input, select {
     width: 105.25px;
     height: 153.5px;
     margin-bottom: 2.5%;
+
+    cursor: pointer;
 }
 .search-container .card-container h4 {
     font-size: 1rem;
