--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -1,4 +1,7 @@
 .navbar-container {
+    position: sticky;
+    top: 0;
+
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
