--- a/src/styles/cardDisplay.css
+++ b/src/styles/cardDisplay.css
@@ -132,3 +132,33 @@
 
     font-size: 15px;
 }
+
+@media screen and (min-width: 1024px) {
+
+    .card-display-container .card-container {
+        margin-top: 3%;
+        margin-bottom: 0;
+    }
+
+    .card-display-container .card-container:last-child {
+        margin-bottom: 3%;
+    }
+
+    .card-display-container .atk-container h4 {
+        font-size: 18px;
+    }
+
+    .card-display-container .attribute-container img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .card-display-container .level-container h4 {
+        font-size: 24px;
+    }
+    .card-display-container .level-container img {
+        width: 30px;
+        height: 30px;
+    }
+
+}
