--- a/src/styles/cardDisplay.css
+++ b/src/styles/cardDisplay.css
@@ -22,11 +22,8 @@
 
     box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.3);
 
-    /* border-top: 2px solid black;
-    border-left: 2px solid black;
-    border-right: 2px solid black; */
-
-    background-color: white;
+    background-color: rgb(240,240,255);
+    border-radius: 1rem;
 }
 .card-display-container:last-child {
     /* border-bottom: 2px solid black; */
