--- a/src/styles/deckMakerPage.css
+++ b/src/styles/deckMakerPage.css
@@ -22,6 +22,8 @@
 .card-info-container img {
     width: 140px;
     height: 204px;
+
+    cursor: pointer;
 }
 .card-info-container p {
     font-size: 12px;
@@ -139,6 +141,8 @@
     position: relative;
 
     margin-bottom: 1%;
+
+    background-color: rgb(250, 250, 250);
 }
 .filter-container .input-container {
     display: flex;
@@ -180,4 +184,74 @@ input, select {
 .deck-maker-container .searched-cards-container {
     height: 74%;
     overflow: auto;
+}
+
+@media screen and (min-width: 1024px) {
+    .deck-maker-container {
+        flex-direction: row;
+    }
+
+    .deck-maker-page .card-info-container p {
+        font-size: 18px;
+    }
+    .deck-maker-page .desc-container {
+        height: 50%;
+    }
+
+    .deck-maker-container .card-info-container {
+        width: 25%;
+        height: 92vh;
+    }
+    .deck-maker-container .deck-container {
+        width: 50%;
+        height: 92vh;
+    }
+    .deck-maker-container .search-container {
+        width: 25%;
+        height: 92vh;
+        position: relative;
+    }
+
+    .deck-maker-page .filter-container {
+        height: 4rem;
+        position: sticky;
+        top: 0;
+    }
+    .deck-maker-page .searched-cards-container {
+        height: 100%;
+    }
+
+    .deck-maker-page .deck-title {
+        justify-content: space-evenly;
+    }
+
+    .card-frame-container img {
+        width: 30px;
+        height: 42px;
+    }
+    .card-frame-container h4 {
+        font-size: 20px;
+    }
+    .deck-maker-page .cover-card {
+        margin: 0;
+        width: 52px;
+        height: 76px;
+    }
+
+    .main-deck-container img {
+        width: 78px;
+        height: 114px;
+    }
+    .extra-deck-container img {
+        width: 78px;
+        height: 114px;
+    }
+
+    .save-deck-container {
+        margin-top: 3%;
+        margin-bottom: 3%;
+    }
+    .save-deck-container button {
+        height: 2.5rem;
+    }
 }
