--- a/src/styles/cardSearch.css
+++ b/src/styles/cardSearch.css
@@ -34,6 +34,7 @@
 
 .card-search-container button {
     margin-top: 3%;
+    margin-bottom: 1.5%;
 
     width: 30%;
 
@@ -45,6 +46,11 @@
     width: 132px;
     height: 48px;
 }
+
+.hide {
+    display: none;
+}
+
 
 @media screen and (min-width: 1024px) {
 
