--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(243,243,243) !important;
+  height: 100%;
+}
+
 .App {
   text-align: center;
   font-family: Georgia, 'Times New Roman', serif;
